uber clone second commit

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
 
         <meta-data
                 android:name="com.google.android.geo.API_KEY"
-                android:value="AIzaSyCTMhjzOCHXYKHrJxxV8JlqJmsBFHAcdW0"/>
+                android:value="API_KEY"/>
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
     </application>
 </manifest>
